# rskvs

./: .env.production  .env.sample  Cargo.toml  README.md  Taskfile.yml  rskvs.code-workspace
.cargo/: config.toml
client/: Cargo.toml
client-lib/: Cargo.toml
client-lib/src/: lib.rs
client/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
server/: Cargo.toml
server/src/: command.rs  handler.rs  main.rs
server/src/handler/: delete.rs  error.rs  get.rs  set.rs
src/: main.rs
