[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
console-subscriber = "0.4.1"
futures = "0.3.31"
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
rskvs_core = { path = "../core" }
thiserror = "2.0.12"
